# draymed

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md
.circleci/: config.yml  push_gemfury.sh
draymed_js/: .npmignore  README.md  RELEASES.md  jest.config.js  package.json  tsconfig.json
draymed_js/src/codes/: index.ts  interfaces.ts
draymed_js/tests/: test_check_master_codes.ts  test_code_map_transform.ts
draymed_js/tests/test-reporters/: summary-reporter.js
draymed_py/: .coveragerc  .gitignore  Makefile  README.md  RELEASES.md  parse_version.py  pyproject.toml  tox.ini
draymed_py/tests/: test_bmi.py  test_check_master_codes.py  test_code_map_transform.py  test_codes.py  test_nhs_number.py  test_pregnancy.py
