[tool.poetry]
name = "draymed"
version = "2.1.5"
description = "Draymed library for SNOMED codes and more"
authors = ["Adam Romano <adam.romano@sensynehealth.com>"]
keywords = ["SNOMED"]
repository = "https://github.com/draysontechnologies/draymed"

[[tool.poetry.source]]
name = "sensynehealth"
url = "https://pypi.fury.io/sensynehealth/"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
bandit = "*"
black = "*"
coverage = "*"
isort = "*"
mock = "*"
mypy = "*"
pytest = "*"
safety = "*"
tox = "*"
