[tool.poetry]
name = "draymed"
version = "2.1.8"
description = "Draymed library for SNOMED codes and more"
authors = ["Adam Romano <adam.romano@sensynehealth.com>"]
keywords = ["SNOMED"]
repository = "https://github.com/draysontechnologies/draymed"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
bandit = "*"
black = "*"
coverage = "*"
isort = "*"
mock = "*"
mypy = "*"
pytest = "*"
safety = "*"
tox = "*"

[build-system]
requires = ["setuptools", "poetry_core>=1.0"]
build-backend = "poetry.core.masonry.api"